--- a/home.html
+++ b/home.html
@@ -7,8 +7,8 @@
   <meta name="description" content="流山市ファミリーサポートセンター ホーム（MVP）" />
   <style>
     :root{
-      --emerald-900:#064e3b; --emerald-800:#065f46; --emerald-700:#047857; --emerald-600:#059669;
-      --emerald-500:#10b981; --emerald-100:#d1fae5; --emerald-50:#ecfdf5;
+      --emerald-900:#166043; --emerald-800:#166043; --emerald-700:#166043; --emerald-600:#059669;
+      --emerald-500:#10b981; --emerald-100:#ffffff; --emerald-50:#F0F8FF;
       --slate-900:#0f172a; --slate-700:#334155; --slate-600:#475569; --slate-500:#64748b; --slate-200:#e2e8f0; --slate-100:#f1f5f9;
       --radius-xl: 1.25rem; --radius-2xl: 1.5rem; --radius-full: 999px; --shadow: 0 6px 18px rgba(0,0,0,.08);
       --maxw: 1120px;
@@ -81,10 +81,12 @@
 
   <main class="container" role="main">
     <section class="hero" id="about">
-      <h2>ふぁみさぽあらまし</h2>
+      <br>
+      <h2>流山市ファミリーサポートセンター</h2>
+      <br>
       <p>
         あああああああああああああああああああああああああ
-        — <a href="#contact" style="text-decoration:underline; text-decoration-style:dotted">各種相談はこちら</a>
+        → <a href="#contact" style="text-decoration:underline; text-decoration-style:dotted">各種相談はこちら</a>
       </p>
       <div class="cta">
         <a href="#register">新規会員登録はこちら</a>
@@ -109,7 +111,8 @@
     <section class="links-and-news">
       <div>
         <a class="linkbtn" href="#flow">
-          <span style="text-decoration:underline; text-decoration-style:dotted">仕組みと流れ</span>
+          <span style="text-decoration:underline; text-decoration-style:dotted">利用会員ログインと提供会員で</span>
+          
           <svg class="chev" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M9 6l6 6-6 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
         </a>
         <div style="height:10px"></div>
