--- a/teikyo-manyual/manual_teikyo.html
+++ b/teikyo-manyual/manual_teikyo.html
@@ -21,8 +21,8 @@
 <!-- 2項目目 -->
 <h2>マイページ画面</h2>
 <a onclick="loadPage('calender')">カレンダーの見方</a>
-<a onclick="loadPage('teikyo-info')">提供会員情報の見方</a>
-<a onclick="loadPage('riyou-info')">利用会員情報の見方</a>
+<a onclick="loadPage('teikyo-info')">提供会員情報</a>
+<a onclick="loadPage('riyou-info')">利用会員情報</a>
 <a onclick="loadPage('menber')">会員情報の変更</a>
 <a onclick="loadPage('decision')">確定日の確認</a>
 
