--- a/teikyo-manyual/manual_teikyo.html
+++ b/teikyo-manyual/manual_teikyo.html
@@ -11,7 +11,9 @@
 <body>
 <div class="sidebar">
 <!-- ここは利用会員か職員か名前を変えてください -->
-<h1>提供会員<br>マニュアルページ</h1>
+<p class="sabu">流山市<br>ファミリーサポートセンター</p>
+<h1>マニュアルページ</h1>
+
 
 <!-- 1項目目 -->
 <h2>利用者の基本操作</h2>
@@ -19,7 +21,6 @@
 
 <!-- 2項目目 -->
 <h2>マイページ画面</h2>
-<a onclick="loadPage('calender')">カレンダーの見方</a>
 <a onclick="loadPage('teikyo-info')">提供会員情報</a>
 <a onclick="loadPage('riyou-info')">利用会員情報</a>
 
